[tool.poetry]
name = "five18"
version = "0.1.0"
description = "Utilities for dealing with pyproject.toml files"
authors = ["Michael Harris <mharris@luabase.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
